# unentropy

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  package.json  unentropy.json
.github/workflows/: ci.yml  metrics.yml  publish.yml  test-artifact-storage.yml  test-publish.yml
.opencode/command/: check-docs.md  generate-docs.md  review-changes.md
docs/: troubleshooting.md
docs/guides/: metrics.md  storage.md
docs/reference/: config.md
openspec/: Roadmap.md  config.yaml
scripts/: build-actions.ts  build-cli.ts  dev-report.ts  generate-fixtures.ts  open-reports.ts  version.ts
scripts/fixtures/: definitions.ts  generator.ts
specs/: Roadmap.md  documentation-structure.md
specs/001-metrics-tracking-poc/: data-model.md  plan.md  quickstart.md  research.md  tasks.md  visual-review-summary.md
specs/001-mvp-metrics-tracking/: data-model.md  quickstart.md  spec.md  tasks.md
specs/003-unified-s3-action/: plan.md  quickstart.md  spec.md  tasks.md
specs/004-metrics-quality-gate/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/005-metrics-gallery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-metrics-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-action-publishing/: spec.md
specs/007-publishing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-init-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: index.ts
src/actions/: quality-gate.ts  track-metrics.ts
src/collector/: collect-runner.ts  collector.ts  context.ts  runner.ts
src/config/: loader.ts  schema.ts
src/metrics/: registry.ts  resolver.ts  types.ts  unit-formatter.ts
src/quality-gate/: evaluator.ts  index.ts  samples.ts  types.ts
tests/fixtures/init-projects/python-full/: Pipfile  pyproject.toml  setup.py
tests/fixtures/init-projects/python-minimal/: pyproject.toml
unentropy-preview/: index.html
website/: astro.config.mjs  package.json
(+392 files in other folders)
